--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -43,37 +43,13 @@
   
   }
   
-  
-  @media (min-width: 768px) {
-      .header:where(.astro-UYRPUYKK) {
-          padding:0 3.75rem
-      }
-  }
-  
-  @media not all and (min-width: 768px) {
-      .header:where(.astro-UYRPUYKK) {
-          padding:0 1.25rem
-          
-      }
-  }
+
   
   .header__title:where(.astro-UYRPUYKK) {
       margin-right: auto
   }
   
-  @media (min-width: 768px) {
-      .header__title:where(.astro-UYRPUYKK) {
-          display:flex;
-          min-height: 100%;
-          align-items: center
-      }
-  }
-  
-  @media not all and (min-width: 768px) {
-      .header__title:where(.astro-UYRPUYKK) {
-          margin-top:.3125rem
-      }
-  }
+
   
   .header__title__row:where(.astro-UYRPUYKK) {
       display: block
@@ -83,47 +59,14 @@
     font-family: 'Shippori Mincho', sans-serif;
   }
   
-  @media (min-width: 768px) {
-      .header__title__row:where(.astro-UYRPUYKK).-row1 {
-          font-size:1.625rem;
-          line-height: 1.1458333333;
-          letter-spacing: .048em;
-          margin-right: .5em
-          
-      }
-  }
-  
-  @media not all and (min-width: 768px) {
-      .header__title__row:where(.astro-UYRPUYKK).-row1 {
-          font-size:1.125rem;
-          line-height: .8888888889;
-          letter-spacing: .04em
-      }
-  }
+ 
   
   .header__title__row:where(.astro-UYRPUYKK).-row2 {
     font-family: 'Shippori Mincho', sans-serif;
 
   }
   
-  @media (min-width: 768px) {
-      .header__title__row:where(.astro-UYRPUYKK).-row2 {
-          font-size:1.125rem;
-          line-height: 1.6176470588;
-          letter-spacing: .034em
-      }
-  }
-  
-  @media not all and (min-width: 768px) {
-      .header__title__row:where(.astro-UYRPUYKK).-row2 {
-          font-size:.6875rem;
-          line-height: 1.4545454545;
-          letter-spacing: .03em;
-          text-align:center;
 
-
-      }
-  }
   
   :root:lang(ja) .header__globalNav:where(.astro-UYRPUYKK) {
     font-family: 'Shippori Mincho', sans-serif;
@@ -139,18 +82,7 @@
 
   }
   
-  @media (min-width: 768px) {
-      .header__globalNav:where(.astro-UYRPUYKK)>ul:where(.astro-UYRPUYKK) {
-          gap:3.125rem
-      }
-  }
-  
-  @media not all and (min-width: 768px) {
-      .header__globalNav:where(.astro-UYRPUYKK)>ul:where(.astro-UYRPUYKK) {
-          gap:1.25rem
-      }
-  }
-  
+
   .header__globalNav:where(.astro-UYRPUYKK)>ul:where(.astro-UYRPUYKK)>li:where(.astro-UYRPUYKK) {
       position: relative
   }
@@ -177,25 +109,92 @@
       width: 100%
   }
   
-  @media (hover: hover) {
-      .header__globalNav:where(.astro-UYRPUYKK)>ul:where(.astro-UYRPUYKK)>li:where(.astro-UYRPUYKK):hover:before {
-          width:100%
-      }
-  }
+
+
+
+
   
-  @media not all and (min-width: 768px) {
-      .header__globalNav:where(.astro-UYRPUYKK) {
-          margin-right:1.25rem
-      }
-  }
-  
-  @media (min-width: 768px) {
-      .header__globalNav:where(.astro-UYRPUYKK) {
-          margin-right:3.75rem
-      }
-  }
-  
-  
+
+  @media print, screen and (min-width: 767px) {
+
+.header__globalNav:where(.astro-UYRPUYKK)>ul:where(.astro-UYRPUYKK) {
+  gap: 3.125rem;
+}
+
+.newsOther_title {
+  font-size: 30px;
+}
+
+.header__globalNav:where(.astro-UYRPUYKK)>ul:where(.astro-UYRPUYKK) {
+  gap: 1.25rem;
+}
+
+.header__globalNav:where(.astro-UYRPUYKK) {
+  margin-right: 1.25rem;
+}
+
+.header__globalNav:where(.astro-UYRPUYKK) {
+  margin-right: 3.75rem;
+}
+
+.header__title__row:where(.astro-UYRPUYKK).-row2 {
+  font-size: 1.125rem;
+  line-height: 1.6176470588;
+  letter-spacing: .034em;
+}
+
+.header__title__row:where(.astro-UYRPUYKK).-row2 {
+  font-size: 0.6875rem;
+  line-height: 1.4545454545;
+  letter-spacing: .03em;
+  text-align: center;
+}
+
+.header__title__row:where(.astro-UYRPUYKK).-row1 {
+  font-size: 1.625rem;
+  line-height: 1.1458333333;
+  letter-spacing: .048em;
+  margin-right: .5em;
+}
+
+.header__title__row:where(.astro-UYRPUYKK).-row1 {
+  font-size: 1.125rem;
+  line-height: .8888888889;
+  letter-spacing: .04em;
+}
+
+.header__title:where(.astro-UYRPUYKK) {
+  display: flex;
+  min-height: 100%;
+  align-items: center;
+}
+
+.header__title:where(.astro-UYRPUYKK) {
+  margin-top: 0.3125rem;
+}
+
+.header:where(.astro-UYRPUYKK) {
+  padding: 0 3.75rem;
+}
+
+.header:where(.astro-UYRPUYKK) {
+  padding: 0 1.25rem;
+}
+
+.header__globalNav:where(.astro-UYRPUYKK) {
+  margin-right: 3.75rem;
+}
+
+.header__globalNav:where(.astro-UYRPUYKK) {
+  margin-right: 1.25rem;
+}
+
+.header__globalNav:where(.astro-UYRPUYKK)>ul:where(.astro-UYRPUYKK)>li:where(.astro-UYRPUYKK):hover:before {
+  width: 100%;
+}
+
+}
+
   
   
   
@@ -314,12 +313,18 @@
   }
   
   
-  @media (max-width:768px){
+  @media print, screen and (max-width: 767px) {
+
+
     .introduction__map[data-astro-cid-j7pv25f6]:where(.astro-HR23OLMI)
   {
     padding-left:0px;
   
+  
   }
+}
+
+ 
   
   .c-bannerList_text {
     line-height: 2;
