--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -204,7 +204,7 @@ img.cover {
 
 @media screen and (min-width: 768px) {
     ._button_1jidj_146 {
-        display:none
+        display:none;
     }
 }
 
