--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,21 +5,18 @@
     <!-- NAVIGATION MENU -->
     <ul class="nav-links">
 
-      <!-- USING CHECKBOX HACK -->
-      <input type="checkbox" id="checkbox_toggle" />
-      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
 
       <!-- NAVIGATION MENUS -->
       <div class="menu">
 
         <li><a href="/">ホーム</a></li>
+
         <li><a href="/kodawari">こだわり</a></li>
 
         <li class="services">
           <a href="/">商品</a>
 
         </li>
-        <li><a href="/">お問い合わせ</a></li>
       </div>
     </ul>
   </nav>
@@ -28,7 +25,6 @@
 
 
   <style>
-/* UTILITIES */
 * {
   margin: 0;
   padding: 0;
@@ -52,16 +48,31 @@ li {
 /* NAVBAR STYLING STARTS */
 .navbar {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   padding: 20px;
-  color: #808080;
-    background:#1C1C1C;
+
+        top: 0px;
+        width: 100%;
+        height: 30px;
+   
 }
 
-.nav-links a {
-  color: #fff;
+
+@media screen and (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+    flex-wrap: wrap;
+    }
 }
+
+
+
+.nav-links a {
+  color: black;
+}
+
+.menu a:hover { border-bottom:1px solid black;}
+
 
 /* LOGO */
 .logo {
@@ -72,14 +83,9 @@ li {
 .menu {
   display: flex;
   gap: 1em;
-  font-size: 18px;
+  font-size: 1rem;
 }
 
-.menu li:hover {
-  background-color: #4c9e9e;
-  border-radius: 5px;
-  transition: 0.3s ease;
-}
 
 .menu li {
   padding: 5px 14px;
@@ -90,86 +96,4 @@ li {
   position: relative; 
 }
 
-.dropdown {
-  background-color: rgb(1, 139, 139);
-  padding: 1em 0;
-  position: absolute; /*WITH RESPECT TO PARENT*/
-  display: none;
-  border-radius: 8px;
-  top: 35px;
-}
-
-.dropdown li + li {
-  margin-top: 10px;
-}
-
-.dropdown li {
-  padding: 0.5em 1em;
-  width: 8em;
-  text-align: center;
-}
-
-.dropdown li:hover {
-  background-color: #4c9e9e;
-}
-
-.services:hover .dropdown {
-  display: block;
-}
-
-
-
-
-
-input[type=checkbox] {
-  display: none;
-} 
-
-/* HAMBURGER MENU */
-.hamburger {
-  display: none;
-  font-size: 24px;
-  user-select: none;
-}
-
-/* APPLYING MEDIA QUERIES */
-@media (max-width: 768px) {
- .menu {
-    display:none;
-    position: absolute;
-    background-color:teal;
-    right: 0;
-    left: 0;
-    text-align: center;
-    padding: 16px 0;
-  }
-
-  .menu li:hover {
-    display: inline-block;
-    background-color:#4c9e9e;
-    transition: 0.3s ease;
-  }
-
-  .menu li + li {
-    margin-top: 12px;
-  }
-
-  input[type=checkbox]:checked ~ .menu {
-    display: block;
-  }
-
-  .hamburger {
-    display: block;
-  }
-
-  .dropdown {
-    left: 50%;
-    top: 30px;
-    transform: translateX(35%);
-  }
-
-  .dropdown li:hover {
-    background-color: #4c9e9e;
-  }
-}
 </style>
