--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,9 @@
   </div>
 
 
-  <style>  .footer02 {
+  <style>  
+  
+  .footer02 {
     color: #808080;
     background:#1C1C1C;
     text-align: center;
