--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,99 +1,92 @@
-<nav class="navbar">
-    <!-- LOGO -->
-    <div class="logo"></div>
-
-    <!-- NAVIGATION MENU -->
-    <ul class="nav-links">
-
-
-      <!-- NAVIGATION MENUS -->
-      <div class="menu">
-
-        <li><a href="/">ホーム</a></li>
-
-        <li><a href="/kodawari">こだわり</a></li>
-
-        <li class="services">
-          <a href="/">商品</a>
-
-        </li>
+<nav class="sticky">
+    <div class="nav-content">
+      <div class="logo">
+        <a href="/">Leather Shop</a>
       </div>
-    </ul>
+      <ul class="nav-links">
+        <li><a href="/">ホーム</a></li>
+        <li><a href="/kodawari">こだわり</a></li>
+        <li><a href="#">商品</a></li>
+      </ul>
+    </div>
   </nav>
-
-
-
-
+  
   <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    nav {
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      background-color: rgba(255, 255, 255, 0.8);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+ 
+      font-family: "Shippori Mincho",sans-serif;
 
-body {
-
-    font-family: 'Shippori Mincho', sans-serif;
-}
-
-a {
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
-}
-
-
-/* NAVBAR STYLING STARTS */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px;
-
-        top: 0px;
-        width: 100%;
-        height: 30px;
-   
-}
-
-
-@media screen and (max-width: 768px) {
-    .navbar {
-        flex-direction: column;
-    flex-wrap: wrap;
     }
-}
 
 
 
-.nav-links a {
-  color: black;
-}
+  
+    nav .nav-content {
+      max-width: 1200px;
+      margin: auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  
+    nav .logo a {
+      font-weight: 500;
+      font-size: 1.05rem;
+      color:#3A3226;
+      padding-left: 20px;
+      
+      text-decoration: none;
 
-.menu a:hover { border-bottom:1px solid black;}
+    }
+  
+    .nav-content .nav-links {
+      display: flex;
+      padding-right: 20px;
+    }
+  
 
+    
+    .nav-content .nav-links li {
+      list-style: none;
+      margin: 0 8px;
+    }
+  
+    .nav-links li a {
+      text-decoration: none;
+      color:#3A3226;
+      font-size: 0.95rem;
+      font-weight: 500;
+      padding: 10px 4px;
+      transition: all 0.3s ease;
+      line-height: 2.6176470588;
+        letter-spacing: .084em;
+        gap:3.125rem;
+        font-family: "Shippori Mincho",sans-serif;
 
-/* LOGO */
-.logo {
-  font-size: 32px;
-}
+    }
 
-/* NAVBAR MENU */
-.menu {
-  display: flex;
-  gap: 1em;
-  font-size: 1rem;
-}
+    .nav-links li a:hover {
+      color: #0e2431;
+      border-bottom:1px solid black;
+    }
+  
+  
+    @media print, screen and (max-width: 767px) {
+      .nav-links li a {
+        width: 100%;
+        text-align: center;
+        font-size: 0.9rem;
+        padding: 0px 0px;
+      }
+ 
+    }
 
+  </style>
+  
 
-.menu li {
-  padding: 5px 14px;
-}
-
-/* DROPDOWN MENU */
-.services {
-  position: relative; 
-}
-
-</style>
