--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -84,7 +84,9 @@
         font-size: 0.9rem;
         padding: 0px 0px;
       }
- 
+      nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
+        font-size: 0.95rem;
+      }
     }
 
   </style>
