--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,14 +22,17 @@ import '@fontsource/shippori-mincho';
 		<meta name="astro-view-transitions-fallback" content="animate">
 	
 		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		
 
-		<title>公式PircaMabui</title>
+		<title>公式 Pirca Mabui</title>
 		<meta name="description" content="北海道-革製品ハンドメイドのオンラインストアです。鞄、財布、キーケース、ミニマムな財布まで、革のパーツごとを素材別で選択ができるため、唯一無二の「とくべつな色」をお届けします。" />
 		<meta name="format-detection" content="telephone=no" />
 
-		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" href="/king.png">
+		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
 	
 
 		<title>{title}</title>
