--- a/src/layouts/Layout3.astro
+++ b/src/layouts/Layout3.astro
@@ -23,14 +23,16 @@ import '@fontsource/shippori-mincho';
 		<meta name="astro-view-transitions-fallback" content="animate">
 	
 		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
+		
 		<title>革について</title>
 		<meta name="description" content="革について" />
 		<meta name="format-detection" content="telephone=no" />
 
-		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" href="/king.png">
+		<link rel="apple-touch-icon" href="/king.png" sizes="180x180">
 	
 
 		<title>{title}</title>
