--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -27,7 +27,7 @@
   </p>
       </div>
       <figure class="introduction__map astro-HR23OLMI">
-        <img src="/thsii-min.jpeg" alt="革のメーカー" class="astro-HR23OLMI">
+        <img src="/thsii-min.webp" alt="革のメーカー" class="astro-HR23OLMI">
         <br><center><span style="color: #999999;"></span>  </center>
       </figure>
     </div>
@@ -40,7 +40,7 @@
   <li class="c-bannerList_node">
     <a href="/products">
       <div class="c-bannerList_img">
-        <img src="/longwallet1-min.jpg" alt="">
+        <img src="/mainpic.jpg" alt="当店のサービス画像" >
       </div>
 <h3 class="c-bannerList_title">PRODUCT</h3>
       <p class="c-bannerList_text">鞄製品に加え、小物財布、キーケースなど積極的に取り扱っております。【商品リストへ移行します】</p>
@@ -49,7 +49,7 @@
   <li class="c-bannerList_node">
     <a href="/patterorder">
       <div class="c-bannerList_img">
-        <img src="/samale-min.jpg" alt="">
+        <img src="/samale-min.jpg" alt="パターンオーダーの画像">
       </div>
       <h3 class="c-bannerList_title">PATTERN ORDER</h3>
       <p class="c-bannerList_text">様々な素材の中からお好みの革の色、金具などをお選びいただいて革小物を製作するセミオーダーを承っております。</p>
@@ -58,7 +58,7 @@
   <li class="c-bannerList_node">
     <a href="/kodawari">
       <div class="c-bannerList_img">
-        <img src="/sampleleather-min.jpg" alt="">
+        <img src="/sampleleather-min.jpg" alt="当店の画像について">
       </div>
       <h3 class="c-bannerList_title">ABOUT LEATHER</h3>
       <p class="c-bannerList_text">主に扱っている革は、イタリアのトスカーナ州ポンテ・ア・エゴラ地区にあるVirgilio Conceria Artigiana社が製造する、表面のスクラッチ加工が特徴のショルダー革です。</p>
@@ -84,7 +84,7 @@
           サイトのリニューアル          </h3>
       </div>
       <div class="topNews_list_img c-newsList_img">
-        <img src="/webee-minn.jpg">
+        <img src="/webee-minn.webp">
       </div>  
     </a>
   </li>
@@ -102,7 +102,7 @@
           WEB制作のご依頼         </h3>
       </div>
       <div class="topNews_list_img c-newsList_img">
-        <img src="/webjobb.jpg">
+        <img src="/webjobb.webp">
       </div>  
     </a>
   </li>
@@ -613,7 +613,7 @@
       }
       
       .top-visual {
-          background-image: linear-gradient(rgba(0, 0, 0, .6),  rgba(0, 0, 0, .5)),url(/mainpic-min.jpg);
+          background-image: linear-gradient(rgba(0, 0, 0, .6),  rgba(0, 0, 0, .5)),url(/mainpic-min.webp);
           height: 100vh;
           top: 0;
           right: 0;
