--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -17,6 +17,20 @@
 
     </div>
     
+
+    <nav class="sticky">
+      <div class="nav-content">
+        <div class="logo">
+          <a href="/">Leather Shop</a>
+        </div>
+        <ul class="nav-links">
+          <li><a href="/">ホーム</a></li>
+          <li><a href="/kodawari">こだわり</a></li>
+          <li><a href="#">商品</a></li>
+        </ul>
+      </div>
+    </nav>
+    
 <section id="down" class="introduction astro-HR23OLMI">
     <div  class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
@@ -27,7 +41,7 @@
   </p>
       </div>
       <figure class="introduction__map astro-HR23OLMI">
-        <img src="/thsii-min.webp" alt="革のメーカー" class="astro-HR23OLMI">
+        <img src="/asnggg.webp" alt="革のメーカー" class="astro-HR23OLMI">
         <br><center><span style="color: #999999;"></span>  </center>
       </figure>
     </div>
@@ -1212,10 +1226,7 @@
       
       
       
-             * {
-          padding: 0;
-          margin: 0;
-      }
+    
       
       
       
@@ -1477,4 +1488,84 @@ img{
 }
 }
       
+
+
+
+
+nav {
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      background-color: rgba(255, 255, 255, 0.8);
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+      width: 100%;
+ 
+      font-family: "Shippori Mincho",sans-serif;
+
+    }
+
+
+
+  
+    nav .nav-content {
+      max-width: 1200px;
+      margin: auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  
+    nav .logo a {
+      font-weight: 500;
+      font-size: 1.05rem;
+      color:#3A3226;
+      padding-left: 20px;
+      
+      text-decoration: none;
+
+    }
+  
+    .nav-content .nav-links {
+      display: flex;
+      padding-right: 20px;
+    }
+  
+
+    
+    .nav-content .nav-links li {
+      list-style: none;
+      margin: 0 8px;
+    }
+  
+    .nav-links li a {
+      text-decoration: none;
+      color:#3A3226;
+      font-size: 0.95rem;
+      font-weight: 500;
+      padding: 10px 4px;
+      transition: all 0.3s ease;
+      line-height: 2.6176470588;
+        letter-spacing: .084em;
+        gap:3.125rem;
+        font-family: "Shippori Mincho",sans-serif;
+
+    }
+
+    .nav-links li a:hover {
+      color: #0e2431;
+      border-bottom:1px solid black;
+    }
+  
+  
+    @media print, screen and (max-width: 767px) {
+      .nav-links li a {
+        width: 100%;
+        text-align: center;
+        font-size: 0.8rem;
+        padding: 0px 0px;
+      }
+      nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
+        font-size: 0.8rem;
+      }
+    }
      </style> 
