--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -605,6 +605,9 @@
       }
       
 
+
+
+
       /*hero */
       
       
@@ -647,12 +650,12 @@
           background-repeat: no-repeat;
       }
       
+
+
       
-      
-      
-      
-      @media (max-width:768px){
-      .contact-link {
+            /*clear*/
+@media print, screen and (max-width: 767px) {    
+    .contact-link {
           -webkit-transition: all 0.3s;
           -o-transition: all 0.3s;
           transition: all 0.3s;
@@ -718,74 +721,7 @@
       
       }
       
-      @media (max-width:450px){
-      .contact-link {
-          -webkit-transition: all 0.3s;
-          -o-transition: all 0.3s;
-          transition: all 0.3s;
-          -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-      }
-      .top-ttl {
-          line-height: 2;
-      }
-      
-      .fs-24-pc {
-          font-size: 2.4rem;
-      }
-      .fs-20 {
-          font-size: 2rem;
-      }
-      .font-serif {
-          font-family: "ryo-text-plusn",serif;
-      }
-      .co-white {
-          color: #fff;
-      }
-      
-      .contact-link .contact-hv {
-          -webkit-transition: all 0.3s;
-          -o-transition: all 0.3s;
-          transition: all 0.3s;
-      }
-      .top-visual::before {
-          content: '';
-          display: block;
-          position: absolute;
-          width: 100%;
-          height: 100vh;
-          background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(0,0,0,0)), to(rgba(0,0,0,0.6)));
-          background: -webkit-linear-gradient(left, rgba(0,0,0,0) 50%, rgba(0,0,0,0.6));
-          background: -o-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.6));
-          background: linear-gradient(to right, rgba(0,0,0,0) 0%, rgba(0,0,0,0.6));
-          top: 0;
-          right: 0;
-      }
-      
-      .top-ttl-box {
-          top: 18.47291%;
-          right: 20px;
-      }
-      
-      
-      .fs-24-pc {
-          font-size:  2.8rem;
-      }
-      .fs-20 {
-          font-size: 2.8rem;
-      }
-      .font-serif {
-          font-family: "ryo-text-plusn",serif;
-      }
-      .co-white {
-          color: #fff;
-      }
-      
-      
-      
-      
-      
-      }
+   
       
       .top-ttl {
           -webkit-writing-mode: vertical-rl;
@@ -1093,31 +1029,22 @@
       
       }
       
-      @media (max-width:768px){
-      #banner h1{
-        font-size: 2.2rem;  
-        margin-block-end: 1rem;
+   
       
-       }
-      
-       #banner p{
-        font-size: 1.35rem;
-        font-family: 'Shippori Mincho', sans-serif;
-      
-      }
-      }
-      
-      @media (max-width:450px){
-      #banner h1{
-              font-size: 2.35rem;
+            /*clear*/
+      @media print, screen and (max-width: 767px) {
+        #banner h1{
+              font-size: 2rem;
         }
       
         #banner p{
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         font-family: 'Shippori Mincho', sans-serif;
       
       }
-      }
+
+      
+    }
       
       
       
@@ -1177,11 +1104,9 @@
          
          
          
-         
-         
-         
-         @media (max-width:768px){
-         .topSection__txt {
+               /*clear*/
+         @media print, screen and (max-width: 767px) {
+          .topSection__txt {
              width: 90.66666666666667vw;
              min-width: auto;
              font-size: 3.466666666666667vw;
@@ -1190,20 +1115,11 @@
              line-height: 2.30769;
              margin-top: 3.125rem;
          }
-         }
+    }
+
+
          
-         @media (max-width:450px){
-         .topSection__txt {
-             width: 90.66666666666667vw;
-             min-width: auto;
-             font-size: 3.466666666666667vw;
-             letter-spacing: 0.05em;
-             font-size: 0.8125rem;
-             line-height: 2.30769;
-             margin-top: 3.125rem;
-         }
-         }
-         
+  
          
          
          
@@ -1324,13 +1240,9 @@
       
          }
          
-      
-      
-      
-      
-      
-      @media (max-width: 768px) {
-        .introduction__container:where(.astro-HR23OLMI) {
+            /*clear*/
+         @media print, screen and (max-width: 767px) {
+          .introduction__container:where(.astro-HR23OLMI) {
           flex-direction: column; /* Stack elements vertically on smaller screens */
           align-items: center;
         }
@@ -1360,9 +1272,13 @@
         .introduction__content:where(.astro-HR23OLMI) {
              max-width: 80%;
          }
-      }
+
+
+}
+
       
       
+
       
       
       
@@ -1431,9 +1347,12 @@
           color: inherit
           
       }
-      
-      
-      @media (max-width:768px){
+
+
+            /*clear*/
+      @media print, screen and (max-width: 767px) {
+
+        
         .introduction__map[data-astro-cid-j7pv25f6]:where(.astro-HR23OLMI)
       {
         padding-left:0px;
@@ -1447,15 +1366,13 @@
         font-family: "Shippori Mincho",sans-serif;
       
       }
-      }
-      
-      @media (max-width:450px){
-        .introduction__map[data-astro-cid-j7pv25f6]:where(.astro-HR23OLMI)
-      {
-        padding-left:0px;
-      
-      }
-      
+
+}
+
+
+
+
+  
       .c-bannerList_text {
         line-height: 2;
         margin: 20px 0 60px;
@@ -1464,7 +1381,7 @@
       
       }
       
-      }
+      
 
       ul {
   list-style: none;
@@ -1475,20 +1392,14 @@ img{
     height: auto;
 }
 
-@media (max-width:768px){
+      /*clear*/
+@media print, screen and (max-width: 767px) {
   .introduction__map[data-astro-cid-ivdev4kk]:where(.astro-HR23OLMI){
     padding-left: 0;
-}
+    }
 
-  }
-  
-  @media (max-width:450px){
-    .introduction__map[data-astro-cid-ivdev4kk]:where(.astro-HR23OLMI){
-    padding-left: 0;
-}
-}
-      
 
+}
 
 
 
@@ -1561,11 +1472,11 @@ nav {
       .nav-links li a {
         width: 100%;
         text-align: center;
-        font-size: 0.8rem;
+        font-size: 0.75rem;
         padding: 0px 0px;
       }
       nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
-        font-size: 0.8rem;
+        font-size: 0.75rem;
       }
     }
      </style> 
