--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -185,6 +185,7 @@
       @media print, screen and (max-width: 767px) {
         .c-newsList {
           width: 100%;
+          padding-left: 0;
         }
       }
       
@@ -480,7 +481,7 @@
       @media print, screen and (max-width: 767px) {
         .aboutService_text {
           width: auto;
-          font-size: 1.1rem;
+          font-size: 0.9rem;
           margin: 20px 0 60px;
       
         }
@@ -503,6 +504,7 @@
         .c-bannerList {
           display: block;
           margin: 60px 0 0;
+          padding-left: 0;
         }
       }
       
@@ -549,14 +551,14 @@
       }
       @media print, screen and (min-width: 768px) and (max-width: 1024px) {
         .c-bannerList_title {
-          font-size: 2rem;
+          font-size: 1.5rem;
           font-family: "Shippori Mincho",sans-serif;
       
         }
       }
       @media print, screen and (max-width: 767px) {
         .c-bannerList_title {
-          font-size: 2rem;
+          font-size: 1.5rem;
           font-family: "Shippori Mincho",sans-serif;  
           text-align: center;
       
