--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -21,7 +21,7 @@
     <nav class="sticky">
       <div class="nav-content">
         <div class="logo">
-          <a href="/">Leather Shop</a>
+          <a href="/"></a>
         </div>
         <ul class="nav-links">
           <li><a href="/">ホーム</a></li>
@@ -1432,7 +1432,6 @@ nav {
       font-weight: 500;
       font-size: 1.05rem;
       color:#3A3226;
-      padding-left: 20px;
       
       text-decoration: none;
 
@@ -1474,11 +1473,11 @@ nav {
       .nav-links li a {
         width: 100%;
         text-align: center;
-        font-size: 0.75rem;
+        font-size: 0.9rem;
         padding: 0px 0px;
       }
       nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
-        font-size: 0.75rem;
+        font-size: 0.9rem;
       }
     }
      </style> 
