--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -174,6 +174,10 @@
       
       
       
+
+
+
+
       
       /* .c-newsList
       -----------------------------------------------------------------*/
@@ -296,7 +300,7 @@
         .c-newsList_title {
           width: auto;
           margin: 10px 0 0;
-          font-size: 1.1rem;
+          font-size: 0.95rem;
           font-family: "Shippori Mincho",sans-serif;
       
         }
@@ -454,14 +458,10 @@
         text-align:center;
         padding-top: 20px;
       }
-      @media print, screen and (min-width: 768px) and (max-width: 1024px) {
-        .aboutService_title {
-          font-size: 30px;
-        }
-      }
+  
       @media print, screen and (max-width: 767px) {
         .aboutService_title {
-          font-size: 2rem;
+          font-size: 1.8rem;
           width: auto;
           margin: 0 0 20px;
       
@@ -481,7 +481,7 @@
       @media print, screen and (max-width: 767px) {
         .aboutService_text {
           width: auto;
-          font-size: 0.9rem;
+          font-size: 0.95rem;
           margin: 20px 0 60px;
       
         }
@@ -500,13 +500,7 @@
         margin: 80px 0 0;
         width: 100%;
       }
-      @media print, screen and (max-width: 767px) {
-        .c-bannerList {
-          display: block;
-          margin: 60px 0 0;
-          padding-left: 0;
-        }
-      }
+  
       
       .c-bannerList_node {
         width: calc((100% - 80px) / 3);
@@ -518,6 +512,8 @@
       .c-bannerList_node:nth-of-type(1), .c-bannerList_node:nth-of-type(2), .c-bannerList_node:nth-of-type(3) {
         margin-top: 0;
       }
+
+
       @media print, screen and (max-width: 767px) {
         .c-bannerList_node {
           width: auto;
@@ -526,7 +522,30 @@
         .c-bannerList_node:last-child {
           margin: 0;
         }
+
+        .c-bannerList {
+          display: block;
+          margin: 60px 0 0;
+          padding-left: 0;
+        }
+
+        .c-bannerList_title {
+          font-size: 1.5rem;
+          font-family: "Shippori Mincho",sans-serif;  
+          text-align: center;
+      
+        }
+
+        .c-bannerList_text {
+        line-height: 2;
+        margin: 20px 0 0px;
+        font-size: 0.9rem;
+        font-family: "Shippori Mincho",sans-serif;
+      
       }
+      }
+
+
       
       .c-bannerList_img {
         position: relative;
@@ -549,21 +568,8 @@
         line-height: 1.5;
         margin: 20px 0 0px;
       }
-      @media print, screen and (min-width: 768px) and (max-width: 1024px) {
-        .c-bannerList_title {
-          font-size: 1.5rem;
-          font-family: "Shippori Mincho",sans-serif;
-      
-        }
-      }
-      @media print, screen and (max-width: 767px) {
-        .c-bannerList_title {
-          font-size: 1.5rem;
-          font-family: "Shippori Mincho",sans-serif;  
-          text-align: center;
-      
-        }
-      }
+ 
+  
       
       .c-bannerList_text {
         line-height: 2;
@@ -574,6 +580,18 @@
       }
       
       
+
+
+
+
+
+
+
+
+
+
+
+
       
       /* hover animation
       -----------------------------------------------------------------*/
@@ -1284,19 +1302,7 @@
       
       
       
-      .sp {
-          display: none !important;
-      }
-      
-      @media screen and (max-width:767px) {
-          .pc {
-              display: none !important;
-          }
-          .sp {
-              display: block !important;
-          }
-      }
-      
+
       
       
       *,:before,:after {
@@ -1350,39 +1356,6 @@
           
       }
 
-
-            /*clear*/
-      @media print, screen and (max-width: 767px) {
-
-        
-        .introduction__map[data-astro-cid-j7pv25f6]:where(.astro-HR23OLMI)
-      {
-        padding-left:0px;
-      
-      }
-      
-      .c-bannerList_text {
-        line-height: 2;
-        margin: 20px 0 60px;
-        font-size: 1.1rem;
-        font-family: "Shippori Mincho",sans-serif;
-      
-      }
-
-}
-
-
-
-
-  
-      .c-bannerList_text {
-        line-height: 2;
-        margin: 20px 0 60px;
-        font-size: 1.1rem;
-        font-family: "Shippori Mincho",sans-serif;
-      
-      }
-      
       
 
       ul {
@@ -1425,7 +1398,7 @@ nav {
       margin: auto;
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
     }
   
     nav .logo a {
