--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -36,7 +36,7 @@
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
         <h2  class="introduction__heading astro-HR23OLMI">ABOUT</h2>
         <p class="introduction__text astro-HR23OLMI">当店では受注生産にてオーダーを承っており、断裁から縫製、仕上げに至るまで、全ての工程を一人の職人が行なっています。<br class="pc"><br class="sp"><br class="sp">製品には希少価値の高い最高級イタリアンレザーをふんだんに使用されており、経年変化により持ち主の色に育ち、歴史が刻まれていきます。
-<br class="pc"> <br class="sp"><br class="sp">革のパーツを色別で選択ができるため、唯一無二の「とくべつな色」に仕上がります。シンプルなデザインに、時間の概念をブレンドした革製品をお届けします。
+<br class="pc"><br class="sp"><br class="sp">革のパーツを色別で選択ができるため、唯一無二の「とくべつな色」に仕上がります。シンプルなデザインに、時間の概念をブレンドした革製品をお届けします。
   
   </p>
       </div>
@@ -57,7 +57,7 @@
         <img src="/mainpic.jpg" alt="当店のサービス画像" >
       </div>
 <h3 class="c-bannerList_title">PRODUCT</h3>
-      <p class="c-bannerList_text">鞄製品に加え、小物財布、キーケースなど積極的に取り扱っております。【商品リストへ移行します】</p>
+      <p class="c-bannerList_text">鞄製品に加え、小物財布、キーケースなど積極的に取り扱っております。<br class="sp">【商品リストへ移行します】</p>
     </a>
   </li>
   <li class="c-bannerList_node">
@@ -300,7 +300,7 @@
         .c-newsList_title {
           width: auto;
           margin: 10px 0 0;
-          font-size: 0.95rem;
+          font-size: 1rem;
           font-family: "Shippori Mincho",sans-serif;
       
         }
@@ -511,6 +511,7 @@
       }
       .c-bannerList_node:nth-of-type(1), .c-bannerList_node:nth-of-type(2), .c-bannerList_node:nth-of-type(3) {
         margin-top: 0;
+        
       }
 
 
@@ -518,9 +519,12 @@
         .c-bannerList_node {
           width: auto;
           margin: 0 0 40px;
+          padding-top: 50px ;
+
         }
         .c-bannerList_node:last-child {
           margin: 0;
+          padding-top: 50px ;
         }
 
         .c-bannerList {
