--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -57,7 +57,7 @@
         <img src="/mainpic.jpg" alt="当店のサービス画像" >
       </div>
 <h3 class="c-bannerList_title">PRODUCT</h3>
-      <p class="c-bannerList_text">鞄製品に加え、小物財布、キーケースなど積極的に取り扱っております。<br class="sp">【商品リストへ移行します】</p>
+      <p class="c-bannerList_text">鞄製品に加え、小物財布、キーケースなど積極的に取り扱っております。</p>
     </a>
   </li>
   <li class="c-bannerList_node">
@@ -519,7 +519,7 @@
         .c-bannerList_node {
           width: auto;
           margin: 0 0 40px;
-          padding-top: 50px ;
+          padding-top: 30px ;
 
         }
         .c-bannerList_node:last-child {
@@ -543,7 +543,7 @@
         .c-bannerList_text {
         line-height: 2;
         margin: 20px 0 0px;
-        font-size: 0.9rem;
+        font-size: 1rem;
         font-family: "Shippori Mincho",sans-serif;
       
       }
