--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <nav class="sticky">
     <div class="nav-content">
       <div class="logo">
-        <a href="/">Leather Shop</a>
+        <a href="/"></a>
       </div>
       <ul class="nav-links">
         <li><a href="/">ホーム</a></li>
@@ -12,7 +12,8 @@
   </nav>
   
   <style>
-    nav {
+
+nav {
       position: -webkit-sticky;
       position: sticky;
       top: 0;
@@ -32,14 +33,13 @@
       margin: auto;
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
     }
   
     nav .logo a {
       font-weight: 500;
       font-size: 1.05rem;
       color:#3A3226;
-      padding-left: 20px;
       
       text-decoration: none;
 
@@ -81,11 +81,11 @@
       .nav-links li a {
         width: 100%;
         text-align: center;
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         padding: 0px 0px;
       }
       nav[data-astro-cid-3ef6ksr2] .logo[data-astro-cid-3ef6ksr2] a[data-astro-cid-3ef6ksr2]{
-        font-size: 0.8rem;
+        font-size: 0.9rem;
       }
     }
 
