--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1322,7 +1322,11 @@
       }
       
       body {
-          margin: 0
+          margin: 0;
+          color: #333;
+          -moz-osx-font-smoothing: grayscale;
+       -webkit-font-smoothing: antialiased;
+       text-rendering: optimizeLegibility;
       }
       
       main {
