--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -106,7 +106,7 @@
             @media print, screen and (max-width: 767px) {
                 .button[data-astro-cid-vnzlvqnm] {
                     padding:14px 20px;
-                    width: 100%
+                    width: 100%;
                     max-width: 80%;
 
                 }
@@ -492,6 +492,8 @@ img.cover {
 
   .introduction__content:where(.astro-HR23OLMI) {
        max-width: 80%;
+       width: 100%;
+
    }
 }
 
