--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1079,69 +1079,9 @@
              scroll-behavior: smooth;
          }
          
+  
+  
          
-         
-         .f-garamond {
-             font-family: 'EB Garamond',serif;
-             font-size: 2.25rem;
-         }
-         
-         div, p, td {
-             margin: 0;
-         
-         }
-         
-         
-         .statementHeader {
-             padding: 30px 0 30px;
-             text-align: center;
-             font-size: 1rem;
-             
-         
-         }
-         
-         
-         .statementHeader__sub {
-         
-             font-size: 1.5rem;
-             letter-spacing: 0.2em;
-             
-         }
-         
-         
-         
-         
-         
-         .topSection__txt {
-             width: 46.875vw;
-             min-width: 700px;
-             margin: 0 auto;
-             font-size: 0.8125rem;
-             line-height: 2.30769;    text-align: justify;
-             
-         
-         
-             letter-spacing: 0.05em;
-           
-             
-         }
-         
-         
-         
-               /*clear*/
-         @media print, screen and (max-width: 767px) {
-          .topSection__txt {
-             width: 90.66666666666667vw;
-             min-width: auto;
-             font-size: 3.466666666666667vw;
-             letter-spacing: 0.05em;
-             font-size: 0.8125rem;
-             line-height: 2.30769;
-             margin-top: 3.125rem;
-         }
-    }
-
-
          
   
          
@@ -1266,8 +1206,9 @@
          
             /*clear*/
          @media print, screen and (max-width: 767px) {
+
           .introduction__container:where(.astro-HR23OLMI) {
-          flex-direction: column; /* Stack elements vertically on smaller screens */
+          flex-direction: column; 
           align-items: center;
         }
       
@@ -1295,8 +1236,7 @@
       
         .introduction__content:where(.astro-HR23OLMI) {
              max-width: 80%;
-         }
-
+        }
 
 }
 
@@ -1345,18 +1285,7 @@
       
       
       
-      
-      hr {
-          box-sizing: content-box;
-          height: 0;
-          overflow: visible;
-          border-top-width: 1px;
-          margin: 0;
-          clear: both;
-          color: inherit
-      }
-      
-      
+    
       a {
           background-color: transparent;
           text-decoration: none;
