--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -106,6 +106,7 @@
             @media print, screen and (max-width: 767px) {
                 .button[data-astro-cid-vnzlvqnm] {
                     padding:14px 20px;
+                    width: 100%
                     max-width: 80%;
 
                 }
@@ -456,7 +457,7 @@ img.cover {
    }
    
 
-   @media print, screen and (max-width: 767px) {
+            @media print, screen and (max-width: 767px) {
     .introduction__map[data-astro-cid-v2cbyr3p]:where(.astro-HR23OLMI){
     padding-left: 0;
 }
@@ -491,7 +492,6 @@ img.cover {
 
   .introduction__content:where(.astro-HR23OLMI) {
        max-width: 80%;
-
    }
 }
 
