--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1071,14 +1071,6 @@
     }
       
       
-      
-        
-         /*top1*/
-         
-         html {
-             scroll-behavior: smooth;
-         }
-         
   
   
          
@@ -1112,7 +1104,7 @@
       
       
       
-        .introduction:where(.astro-HR23OLMI) {
+        .introduction{
              background-color: var(--color-white);
              margin-bottom: -4px;
              padding-bottom: 4px;
@@ -1121,7 +1113,7 @@
          
          
          
-         .introduction__container:where(.astro-HR23OLMI) {
+         .introduction__container{
              display: flex;
              align-items: center;
              width: 100%;
@@ -1129,7 +1121,7 @@
              margin: 0 auto;
          }
          
-         .introduction__content:where(.astro-HR23OLMI) {
+         .introduction__content{
              padding: 8.125rem 0 8.125rem 9.5168374817%;
              max-width: 47.364568082%;
          }
@@ -1137,7 +1129,7 @@
          
          
          
-         .introduction__heading:where(.astro-HR23OLMI) {
+         .introduction__heading {
           font-family: 'Shippori Mincho', sans-serif;
               font-size: 2rem;
              line-height: 1.7;
@@ -1158,7 +1150,7 @@
          
          
          
-         .introduction__text:where(.astro-HR23OLMI) {
+         .introduction__text {
               font-family: 'Shippori Mincho B1',serif;
              line-height: 2.3076923077;
              margin-top: 3.125rem;
@@ -1168,6 +1160,53 @@
       
       
          }
+
+
+
+
+
+            /*clear*/
+         @media print, screen and (max-width: 767px) {
+
+          .introduction__container {
+          flex-direction: column; 
+          align-items: center;
+        }
+      
+
+
+        .introduction__text {
+          margin-top: 1.25rem; /* Add space between image and text */
+          text-align: left; /* Center text */
+          font-size: 1.1rem;
+        }
+
+        .introduction__content{
+          padding: 2.5rem 0; /* Adjust padding for spacing */
+          text-align: center; /* Center text on smaller screens */
+        }
+      
+        .introduction__map{
+          display: block;
+          margin: 0;
+          width: 100%; /* Make the image take up 100% of the width */
+        }
+      
+      
+        .introduction__heading {
+          font-size: 2rem;
+          line-height: 1.7;
+        }
+      
+        .introduction__content {
+             max-width: 80%;
+        }
+
+}
+
+
+
+
          
       
          p, table, blockquote, address, pre, iframe, form, figure, dl {
@@ -1180,7 +1219,7 @@
              border-width: 0;
          }
          
-         .introduction__map:where(.astro-HR23OLMI) {
+         .introduction__map {
              display: block;
              flex: 1;
              margin-right: -1.25rem;
