--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -366,7 +366,7 @@ img.cover {
 
 
 
-  .introduction:where(.astro-HR23OLMI) {
+  .introduction{
        background-color: var(--color-white);
        margin-bottom: -4px;
        padding-bottom: 4px;
@@ -375,7 +375,7 @@ img.cover {
    
    
    
-   .introduction__container:where(.astro-HR23OLMI) {
+   .introduction__container {
        display: flex;
        align-items: center;
        width: 100%;
@@ -383,7 +383,7 @@ img.cover {
        margin: 0 auto;
    }
    
-   .introduction__content:where(.astro-HR23OLMI) {
+   .introduction__content {
        padding: 6.125rem 0 6.125rem 9.5168374817%;
        max-width: 47.364568082%;
    }
@@ -391,7 +391,7 @@ img.cover {
    
    
    
-   .introduction__heading:where(.astro-HR23OLMI) {
+   .introduction__heading {
     font-family: 'Shippori Mincho', sans-serif;
         font-size: 1.5rem;
        line-height: 1.7;
@@ -411,7 +411,7 @@ img.cover {
    
    
    
-   .introduction__text:where(.astro-HR23OLMI) {
+   .introduction__text{
         font-family: 'Shippori Mincho B1',serif;
        line-height: 2.3076923077;
        margin-top: 3.125rem;
@@ -433,7 +433,7 @@ img.cover {
        border-width: 0;
    }
    
-   .introduction__map:where(.astro-HR23OLMI) {
+   .introduction__map{
        display: block;
        flex: 1;
        margin-right: -1.25rem;
@@ -458,39 +458,39 @@ img.cover {
    
 
             @media print, screen and (max-width: 767px) {
-    .introduction__map[data-astro-cid-v2cbyr3p]:where(.astro-HR23OLMI){
+    .introduction__map[data-astro-cid-v2cbyr3p]{
     padding-left: 0;
 }
 
-    .introduction__container:where(.astro-HR23OLMI) {
+    .introduction__container{
     flex-direction: column; /* Stack elements vertically on smaller screens */
     align-items: center;
   }
 
-  .introduction__content:where(.astro-HR23OLMI) {
+  .introduction__content {
     padding: 2.5rem 0; /* Adjust padding for spacing */
     text-align: center; /* Center text on smaller screens */
   }
 
-  .introduction__map:where(.astro-HR23OLMI) {
+  .introduction__map{
     display: block;
     margin: 0;
     width: 100%; /* Make the image take up 100% of the width */
   }
 
-  .introduction__text:where(.astro-HR23OLMI) {
+  .introduction__text {
     margin-top: 1.25rem; /* Add space between image and text */
     text-align: left; /* Center text */
     font-size: 1.1rem;
     padding-top: 30px;
   }
 
-  .introduction__heading:where(.astro-HR23OLMI) {
+  .introduction__heading {
     font-size: 1.4rem;
     line-height: 1.7;
   }
 
-  .introduction__content:where(.astro-HR23OLMI) {
+  .introduction__content {
        max-width: 80%;
    }
 }
