--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1178,7 +1178,7 @@
         .introduction__text {
           margin-top: 1.25rem; /* Add space between image and text */
           text-align: left; /* Center text */
-          font-size: 1.1rem;
+          font-size: 0.95rem;
         }
 
         .introduction__content{
@@ -1194,7 +1194,7 @@
       
       
         .introduction__heading {
-          font-size: 2rem;
+          font-size: 1.8rem;
           line-height: 1.7;
         }
       
@@ -1304,7 +1304,7 @@ img{
 
       /*clear*/
 @media print, screen and (max-width: 767px) {
-  .introduction__map[data-astro-cid-ivdev4kk]:where(.astro-HR23OLMI){
+  .introduction__map[data-astro-cid-ivdev4kk]{
     padding-left: 0;
     }
 
